# pg_stage

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bandit.yml  black.yml  mypy.yml  pytest.yml  ruff.yml
pg_stage/: mutator.py  obfuscator.py
pg_stage/tests/: test.sql  test_parse_comment_column.py  test_parse_comment_table.py  test_parse_copy_values.py  test_prepared_data.py
pg_stage/tests/sql/: test_parse_copy_values_with_delete_tables.sql  test_parse_copy_values_with_relations.sql
src/pg_stage/: custom.py  mimesis_interface.py  mutator.py  obfuscator.py  processor.py  types.py  typing.py
src/pg_stage/obfuscators/: custom.py  plain.py
tests/: conftest.py  test_conditions.py  test_parse_comment_column.py  test_parse_comment_table.py  test_parse_copy_values.py  test_prepared_data.py
tests/sql/: example_dump.sql  example_dump_with_full_name_and_two_type_of_number.sql  test_by_pattern_condition.sql  test_equal_condition.sql  test_not_equal_condition.sql  test_obfuscate_uuid_by_source_value.sql  test_parse_copy_values_with_mutation.sql  test_parse_copy_values_with_relations.sql  test_parse_copy_values_with_self_relation.sql  test_two_mutation_for_one_column.sql
