[tool.poetry]
name = "pg_stage"
version = "0.4.0"
description = "Anonymization of data in pg_dump"
authors = ["froOzzy"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["BLE", "FBT", "B", "A", "COM", "C4", "EM", "FIX", "I"]
fixable = ["I"]
ignore = ["COM812"]

[tool.ruff.format]
quote-style = "single"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg_stage"
version = "0.4.0"
authors = [
  { name="froOzzy", email="ieme5gll6u78@mail.ru" },
]
description = "Anonymization of data in pg_dump"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["mimesis == 4.1.3", "typing-extensions >= 4.5.0"]
license = "MIT"
license-files = ["LICENSE.txt"]

[project.urls]
"Homepage" = "https://github.com/froOzzy/pg_stage"

[tool.poetry.dependencies]
python = ">=3.7"
mimesis = "4.1.3"
typing-extensions = ">=4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
bandit = "1.7.5"
ruff = "0.11.8" 
mypy = "1.4.1"
